--- a/style.css
+++ b/style.css
@@ -105,6 +105,92 @@ body {
 }
 
 
+/*CALENDAR*/
+
+
+
+.calendarlayout {
+  border-style: solid;
+  border-width: 3px;
+  border-color: rgb( 255, 255, 255 );
+  background-image: -moz-linear-gradient( 90deg, rgb( 229, 229, 229 ) 0%, rgb( 255, 255, 255 ) 39.404%);
+  background-image: -webkit-linear-gradient( 90deg, rgb( 229, 229, 229 ) 0%, rgb( 255, 255, 255 ) 39.404%);
+  box-shadow: 2px 3.464px 0px 0px rgb( 10, 70, 104 );
+  position: absolute;
+  left: 635px;
+  top: 115px;
+  width: 338px;
+  height: 234px;
+  z-index: 1;
+}
+
+.calendar-header {
+
+	width: 212px;
+	height: 40px;
+	float: left;
+	position: relative;
+	border: 1px solid #bbbbbb;
+}
+
+.calendar-welcome {
+	
+	width: 122px;
+	height: 40px;
+	position: relative;
+	float: left;
+	border: 1px solid #b9b9b9;
+}
+
+.calendargrid {
+	width:214px;
+	height: 193px;
+	padding: 0px;	
+	float: left;
+	position: relative;
+	border-collapse:collapse;
+}
+.calendar-selecteddate {
+	width:124px;
+	border:0px;
+	position: relative;
+	float: left;
+}
+
+.calendarlayout td {
+	width:29px;
+	height:26px;
+     font-size: 12px;
+  font-family: "Arial";
+  color: rgb( 61, 61, 61 );
+  text-align: center;
+  text-shadow: 0.5px 0.866px 0px rgb( 255, 255, 255 );
+    border: 1px solid #bbbbbb;
+    padding:0;
+    background-image: -moz-linear-gradient( 90deg, rgb( 224, 224, 224 ) 0%, rgb( 249, 249, 249 ) 100%);
+    background-image: -webkit-linear-gradient( 90deg, rgb( 224, 224, 224 ) 0%, rgb( 249, 249, 249 ) 100%);
+  
+
+
+}
+.calendarlayout th {
+	height: 18px;  
+	font-size: 10px;
+    font-family: "Arial";
+    color: rgb( 73, 73, 73 );
+    text-align: center;
+}
+
+.calendarlayout tr {
+	 border: 1px solid #bbbbbb;
+
+}
+
+
+
+
+
+
 /*USERBAR*/
 .userbar {
 	position:relative;
