--- a/calendar.css
+++ b/calendar.css
@@ -1,6 +1,6 @@
 * {
 	margin: 0 auto;
-	background-color: #333;
+	
 }
 
 
@@ -11,11 +11,11 @@
 	border: solid 3px rgba( 255, 255, 255, 0.3 );
 	border-radius: 3px;
 	position: absolute;
-	/*left: 635px;
-	top: 115px;*/
+	left: 635px;
+	top: 115px;
 	width: 344px;
 	height: 239px;
-	z-index: 2;
+	z-index: 4;
 }
 
 .calendar-header {
@@ -23,14 +23,8 @@
 	height: 38px;
 	float: left;
 	position: relative;
-
-	border-top-width: 1px;
-	border-bottom-width: 0px;
-	border-left-width: 1px;
-	border-right-width: 1px;
-	border-color: #bbbbbb;
-	border-style: solid;
-    background-image: -moz-linear-gradient( 90deg, rgb( 76, 186, 255 ) 0%, rgb( 76, 186, 255 ) 0%, rgb( 49, 154, 213 ) 0%, rgb( 64, 113, 183 ) 100%);
+	border: 1px  #bbb solid;
+	background-image: -moz-linear-gradient( 90deg, rgb( 76, 186, 255 ) 0%, rgb( 76, 186, 255 ) 0%, rgb( 49, 154, 213 ) 0%, rgb( 64, 113, 183 ) 100%);
     background-image: -webkit-linear-gradient( 90deg, rgb( 76, 186, 255 ) 0%, rgb( 76, 186, 255 ) 0%, rgb( 49, 154, 213 ) 0%, rgb( 64, 113, 183 ) 100%);
   	font-size: 16px;
     font-family: "Arial";
@@ -72,8 +66,15 @@
 	float: left;
 	position: relative;
 	border-collapse:collapse;
+	border-color: #FFFFFF;
+	border-top-width: 0px;
+	border-bottom-width: 0px;
+	border-left-width: 0px;
+	border-right-width: 0px;
+
 
 }
+
 
 .calendar-selecteddate {
 	width:133px;
@@ -81,8 +82,85 @@
 	position: relative;
 	float: left;
 	height: 199px;
-	background-color: rgb( 242, 242, 242 );
+	
+	background: url(img/mypart.png);
+	background-repeat: repeat-y;
     box-shadow: -1px 0px 0px 0px rgb( 187, 187, 187 );
+
+}
+
+.calendar-selecteddate H1 {
+	position: relative;
+  font-size: 30px;
+  font-family: "Arial";
+  color: rgb( 41, 133, 190 );
+  font-weight: bold;
+  text-align: center;
+  text-shadow: 0.5px 0.866px 0px rgb( 255, 255, 255 );
+  text-align:center;
+  background: url(img/mypart.png);
+
+}
+
+.calendar-selecteddate H2 {
+	position: relative;
+  font-size: 14px;
+  font-family: "Arial";	
+  color: rgb( 115, 114, 114 );
+  font-weight: bold;
+  text-align: center;
+  text-shadow: 0.5px 0.866px 0px rgb( 255, 255, 255 );
+  background: url(img/mypart.png);
+
+}
+
+
+.calendar-selecteddate H3{
+  font-size: 10px;
+  font-family: "Arial";
+  color: rgb( 136, 136, 136 );
+  line-height: 2;
+  text-align: center;
+  text-shadow: 0.5px 0.866px 0px rgb( 255, 255, 255 );
+  padding-top: 13px;
+
+}
+
+
+.calendar-selecteddate ul {
+
+	position: relative;
+	top: 0;
+	right: 0;
+	padding-top: 15px;
+	padding-left:25px;
+}
+.calendar-selecteddate ul li {
+	list-style-image:url(img/list-point.png);
+
+  	font-size: 12px;
+  	font-family: "Arial";
+  	color: rgb( 61, 61, 61 );
+  	line-height: 1.667;
+  	text-align: left;
+  	text-shadow: 0.5px 0.866px 0px rgb( 255, 255, 255 );
+  	font-weight: bold;
+  	background:transparent; 
+  	display: list-item;
+  	height: 12px;
+  	padding-top: 8px;
+
+}
+
+
+
+.calendar-selecteddate .line {
+  background-image: url("img/calendar-line.png");
+  position: absolute;
+  left: 10px;
+  top: 85px;
+  width: 120px;
+  height: 2px;
 }
 
 .calendarlayout td {
@@ -111,6 +189,7 @@
 
 .calendarlayout tr {
 	 border: 1px solid #bbbbbb;
+
 }
 
 .calendarlayout .nocur {  
@@ -121,9 +200,12 @@
     background-color: rgb( 255, 255, 255 );
     background-image: -moz-linear-gradient( 90deg, rgb( 255, 255, 255 ) 0%, rgb( 255, 255, 255 ) 100%);
     background-image: -webkit-linear-gradient( 90deg, rgb( 255, 255, 255 ) 0%, rgb( 255, 255, 255 ) 100%);
-
-  
 }
+
+
+
+
+
 
 
 
