--- a/auth.css
+++ b/auth.css
@@ -2,116 +2,243 @@
 	margin: 0 auto;
 }
 body {
-	background-color:#efefef;
+	background-color: #efefef;
 }
-
-.container, .header , .content, .userbar, .footer, .contentcontent{
-	width:1020px;
+.container, .header, .userbar, .footer, .header-up {
+	width: 1020px;
 }
-
 .header {
-	height:304px;
-	
-	/*border:1px solid #FFFFFF;*/
-	position:relative;
-	box-shadow: 0 0 1px 0 rgb( 0, 0, 0 );
-
+	height: 345px;
+	position: relative;
 }
-
-
+.header-up {
+	height: 16px;
+	background-image: url(img/header-auth.png);
+}
+.header-image {
+	background-image: url(img/auth/logo.png);
+	height: 313px;
+	width: 313px;
+	opacity: 0.35;
+	background-repeat: no-repeat;
+	position: absolute;
+}
 .container {
-  background-image: url("img/auth/bck.png");
-  
- 
-  width: 1026px;
-  height: 991px;
-  
+	height: 991px;
+	background: -moz-linear-gradient(top, #416fb6 0%, #207cca 13%, #319bd6 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #416fb6), color-stop(13%, #207cca), color-stop(100%, #319bd6));
+	background: -webkit-linear-gradient(top, #416fb6 0%, #207cca 13%, #319bd6 100%);
+	background: -o-linear-gradient(top, #416fb6 0%, #207cca 13%, #319bd6 100%);
+	background: -ms-linear-gradient(top, #416fb6 0%, #207cca 13%, #319bd6 100%);
+	background: linear-gradient(to bottom, #416fb6 0%, #207cca 13%, #319bd6 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#416fb6', endColorstr='#319bd6', GradientType=0 );
 }
-
-
 /*HEADER*/
 .logo {
-	height:100px;
-	width:400px;
-	float:left;
-	position:absolute;
-	left:110px;
-	top:50px;
+	height: 100px;
+	width: 400px;
+	float: left;
+	position: absolute;
+	left: 110px;
+	top: 50px;
 	/*border:1px solid black;*/
-	font-family:  verdana, arial, sans-serif;
+	font-family: verdana, arial, sans-serif;
 	/*font-weight: bold;*/
 	display: inline-block;
-	text-align:center;
-	font-size:60px;
-	color:#efefef;
+	text-align: center;
+	font-size: 60px;
+	color: #efefef;
+	z-index: 6;
 }
 .logotxt {
-	height:110px;
-	width:350px;
-	float:left;
-	position:absolute;
-	left:150px;
-	top:130px;
-
-	font-family:  verdana, arial, sans-serif;
+	height: 110px;
+	width: 350px;
+	float: left;
+	position: absolute;
+	left: 150px;
+	top: 130px;
+	font-family: verdana, arial, sans-serif;
 	/*font-weight: bold;*/
 	display: inline-block;
-	text-align:right;
-	font-size:24px;
-	color:#efefef;
+	text-align: right;
+	font-size: 24px;
+	color: #efefef;
 }
-
-
-
 .header ul {
-	position:absolute;
-	top:20px;
-	right:20px;
-	
+	position: absolute;
+	top: 20px;
+	right: 20px;
 }
-
 .header li {
-	margin:-2px;
-	height:25px;
-	width:100px;
-	position:relative;
-	background-repeat:repeat-x;
-	cursor:pointer;
+	margin: -2px;
+	height: 25px;
+	width: 100px;
+	position: relative;
+	background-repeat: repeat-x;
+	cursor: pointer;
 	list-style: none;
-	padding-top:8px;
-	font-family:  verdana, arial,sans-serif;
+	padding-top: 8px;
+	font-family: verdana, arial, sans-serif;
 	display: inline-block;
-	text-align:center;
-	font-size:13px;
-	background-image:url(img/menubg.png);
+	text-align: center;
+	font-size: 13px;
+	background-image: url(img/menubg.png);
 }
-
-
-.header li a:link,
-.header li a:visited,
-.header li a:hover ,
-.header li a:active {
-	color:#efefef;
-	text-decoration:none;
+.header li a:link, .header li a:visited, .header li a:hover, .header li a:active {
+	color: #efefef;
+	text-decoration: none;
 }
-
 .authorization {
-	height:20px;
-	width:200px;
-	float:left;
-	position:absolute;
-	right:60px;
-	top:53px;
-	font-family:  verdana, arial, sans-serif;
+	height: 20px;
+	width: 200px;
+	float: left;
+	position: absolute;
+	right: 60px;
+	top: 53px;
+	font-family: verdana, arial, sans-serif;
 	/*font-weight: bold;*/
 	display: inline-block;
-	text-align:right;
-	font-size:11px;
-	color:#efefef;
+	text-align: right;
+	font-size: 11px;
+	color: #efefef;
+}
+.content, .left-content, .right-content, .left-title, .left-text, .auth-email, .auth-password {
+	font-family: "Verdana";
+}
+.content {
+	background-color: #e8e8e8;
+	position: relative;
+	height: 605px;
+	width: 930px;
+	border-radius: 10px;
+}
+.left-content {
+	background-color: #FFF;
+	width: 440px;
+	height: 275px;
+	position: absolute;
+	margin-left: 15px;
+	margin-top: 15px;
+	border-radius: 10px;
+	box-shadow: 0.5px 0.5px 0.5px 0.5px;
+}
+.right-content {
+	background-color: #FFF;
+	width: 440px;
+	height: 570px;
+	position: absolute;
+	margin-left: 15px;
+	margin-top: 15px;
+	border-radius: 10px;
+	box-shadow: 0.5px 0.5px 0.5px 0.5px;
+	right:15px;
+}
+.left-title {
+	font-size: 24px;
+	color: rgb( 0, 0, 0 );
+	font-weight: bold;
+	line-height: 0.833;
+	position: absolute;
+	width: 440px;
+	text-align: center;
+	padding-top: 25px;
+	margin-left: 15px;
+	margin-top: 15px;
+}
+.right-title {
+	font-size: 24px;
+	color: rgb( 0, 0, 0 );
+	font-weight: bold;
+	line-height: 0.833;
+	position: absolute;
+	width: 440px;
+	text-align: center;
+	padding-top: 10px;
+	margin-left: 15px;
+	margin-top: 15px;
 }
 
-.logoimg {
-	opacity: 0.15;
-	padding-top: 15px;
+.left-text {
+	font-size: 12px;
+	color: rgb( 0, 0, 0 );
+	line-height: 1.667;
+	text-align: center;
+	width: 440px;
+	position: absolute;
+	margin-left: 15px;
+	margin-top: 15px;
+	padding-top: 60px;
+}
+.right-text {
+	font-size: 12px;
+	color: rgb( 0, 0, 0 );
+	line-height: 1.667;
+	text-align: center;
+	width: 440px;
+	position: absolute;
+	margin-left: 15px;
+	padding-top: 60px;
+}
+.right-text-bottom {
+	font-size: 12px;
+	color: rgb( 0, 0, 0 );
+	line-height: 1.667;
+	text-align: center;
+	width: 440px;
+	position: absolute;
+	margin-left: 3px;
+	padding-top: 375px;
+}
+.auth-form-cont {
+	width: 440px;
+	height: 88px;
+	position: absolute;
+	text-align: center;
+	top: -10px;
+}
 
+.input {
+	padding-top: 155px;
+	position: absolute;
+	left: 85px;
+	text-align: right;
+	font-size: 12px;
+	font-weight: bold;
+}
+.input-right {
+	padding-top: 100px;
+	position: absolute;
+	left: 85px;
+	text-align: right;
+	font-size: 12px;
+	font-weight: bold;
+}
+.submit {
+	list-style: none;
+	position: absolute;
+	top: 118px;
+	left: 40px;
+}
+.submit li {
+	height: 34px;
+	width: 220px;
+	position: relative;
+	background-image: url(img/buttons/button.png);
+	background-repeat: no-repeat;
+	cursor: pointer;
+	list-style: none;
+	padding-top: 10px;
+	display: inline-block;
+	text-align: center;
+	font-size: 14px;
+	margin-top: 6px;
+	margin-left: 9px;
+	color: #efefef;
+	font-family: arial, verdana, sans-serif;
+	font-weight: bold;
+	color: #efefef;
+	font-size: 16px;
+}
+.submit li:hover {
+	background-image: url(img/buttons/button-hover.png);
 }
