--- a/auth.css
+++ b/auth.css
@@ -4,90 +4,10 @@
 body {
 	background-color: #efefef;
 }
-.container, .header, .userbar, .footer, .header-up, .buttonbar-content {
+.container, .userbar, .header-up, .buttonbar-content, .content {
 	width: 1020px;
 }
-.header {
-	height: 345px;
-	position: relative;
-}
-.header-up {
-	height: 16px;
-	background-image: url(img/header-auth.png);
-}
-.header-image {
-	background-image: url(img/auth/logo.png);
-	height: 313px;
-	width: 313px;
-	opacity: 0.35;
-	background-repeat: no-repeat;
-	position: absolute;
-}
-.container {
-	height: 935px;
-	background: -moz-linear-gradient(top, #416fb6 0%, #207cca 13%, #319bd6 100%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #416fb6), color-stop(13%, #207cca), color-stop(100%, #319bd6));
-	background: -webkit-linear-gradient(top, #416fb6 0%, #207cca 13%, #319bd6 100%);
-	background: -o-linear-gradient(top, #416fb6 0%, #207cca 13%, #319bd6 100%);
-	background: -ms-linear-gradient(top, #416fb6 0%, #207cca 13%, #319bd6 100%);
-	background: linear-gradient(to bottom, #416fb6 0%, #207cca 13%, #319bd6 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#416fb6', endColorstr='#319bd6', GradientType=0 );
-}
-/*HEADER*/
-.logo {
-	height: 100px;
-	width: 400px;
-	float: left;
-	position: absolute;
-	left: 110px;
-	top: 50px;
-	/*border:1px solid black;*/
-	font-family: verdana, arial, sans-serif;
-	/*font-weight: bold;*/
-	display: inline-block;
-	text-align: center;
-	font-size: 60px;
-	color: #efefef;
-	z-index: 6;
-}
-.logotxt {
-	height: 110px;
-	width: 350px;
-	float: left;
-	position: absolute;
-	left: 150px;
-	top: 130px;
-	font-family: verdana, arial, sans-serif;
-	/*font-weight: bold;*/
-	display: inline-block;
-	text-align: right;
-	font-size: 24px;
-	color: #efefef;
-}
-.header ul {
-	position: absolute;
-	top: 20px;
-	right: 20px;
-}
-.header li {
-	margin: -2px;
-	height: 25px;
-	width: 100px;
-	position: relative;
-	background-repeat: repeat-x;
-	cursor: pointer;
-	list-style: none;
-	padding-top: 8px;
-	font-family: verdana, arial, sans-serif;
-	display: inline-block;
-	text-align: center;
-	font-size: 13px;
-	background-image: url(img/menubg.png);
-}
-.header li a:link, .header li a:visited, .header li a:hover, .header li a:active {
-	color: #efefef;
-	text-decoration: none;
-}
+
 .authorization {
 	height: 20px;
 	width: 200px;
@@ -96,7 +16,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#416fb6', end
 	right: 60px;
 	top: 53px;
 	font-family: verdana, arial, sans-serif;
-	/*font-weight: bold;*/
 	display: inline-block;
 	text-align: right;
 	font-size: 11px;
@@ -108,8 +27,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#416fb6', end
 .content {
 	background-color: #e8e8e8;
 	position: relative;
-	height: 560px;
-	width: 930px;
+	height: 630px;;
 	border-radius: 10px;
 }
 .left-content {
@@ -117,8 +35,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#416fb6', end
 	width: 440px;
 	height: 275px;
 	position: absolute;
-	margin-left: 15px;
-	margin-top: 15px;
+	margin-left: 45px;
+	margin-top: 85px;
 	border-radius: 10px;
 	box-shadow: 0.5px 0.5px 0.5px 0.5px;
 }
@@ -128,7 +46,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#416fb6', end
 	height: 525px;
 	position: absolute;
 	margin-left: 15px;
-	margin-top: 15px;
+	margin-top: 85px;
+	margin-right:45px;
 	border-radius: 10px;
 	box-shadow: 0.5px 0.5px 0.5px 0.5px;
 	right:15px;
