--- a/style.css
+++ b/style.css
@@ -295,12 +295,13 @@ body {
 }
 .usrsp-content {
 	background-color: rgb( 244, 244, 244 );
-	position: inherit;
+	position: relative;
 	width: 746px;
 	height: 348px;
 	left: 6px;
 	top: 5px;
 	border-radius: 10px;
+	margin-top: 10px;
 }
 .usrsp-title {
 	font-size: 36px;
