--- a/css/regresult.css
+++ b/css/regresult.css
@@ -5,7 +5,7 @@
     position: relative;
     border-radius: 10px;
     box-shadow: 0.5px 0.5px 0.5px 0.5px;
-    top: 150px;
+    /*top: 150px;*/
 }
 
 .messagetxt {
